Fix version info scrolling on iPhone

--- a/src/app/css/gadgets.css
+++ b/src/app/css/gadgets.css
@@ -5,6 +5,7 @@
 
 .scroll-shadow {
 	overflow-y: auto;
+	-webkit-overflow-scrolling: touch; /* Safari 上啟用動能捲動 */
 
 	background:
 		/* Shadow covers */
